--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h1>Amjad Seyedi</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="photos/bio.png" alt="alt text" width="140px" height="140px" />&nbsp;</td>
+<img src="photos/bio.jpg" alt="alt text" width="140px" height="140px" />&nbsp;</td>
 <td align="left"><p>Doctoral researcher,<br /> <a href="https://web.umons.ac.be/maro/en/home/">Mathematics and Operational Research Department</a> <br /><a href="https://web.umons.ac.be/fpms/en/">Faculty of Engineering</a>, <a href="https://web.umons.ac.be/en/">University of Mons (UMONS)</a><br />
 Rue de Houdain 9, 7000 Mons, Belgium <br /> 
 Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
@@ -59,6 +59,8 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </ul>
 <h3>Recent news</h3>
 <ul>
+<li><p>I attended the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/453">Systems, Optimization, Control and Networks (SOCN) Workshop</a>, UMONS, Belgium, September 26, 2025.</p>
+</li>
 <li><p>I was on the organizing committee of the <a href="https://sites.google.com/view/lrma25">third workshop on Low-Rank Models and Applications (LRMA 25)</a>, Mons, September 11-12, 2025.</p>
 </li>
 <li><p>I attended the &ldquo;<a href="https://www.cwi.nl/en/events/cwi-research-semester-programmes/phd-school-machine-learning-and-optimization/">PhD School: Machine Learning and Optimization</a>&rdquo;, at the Centrum Wiskunde &amp; Informatica (CWI), Netherlands, September 2-4, 2025.</p>
@@ -116,8 +118,6 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 	</noscript>
 <!-- End of Statcounter Code -->
 
+
 </body>
 </html>
-
-
-
