--- a/Publications.html
+++ b/Publications.html
@@ -29,13 +29,19 @@
 <h2>Publications </h2>
 <h3>Preprints</h3>
 <ul>
+<li><p>Community Detection via Deep Motif-Regularized Asymmetric Nonnegative Matrix Factorization
+<br /> H. Sohrabi, <b>A. Seyedi</b>, P. Moradi, and Sh. Esmaeili, [First revision].</p>
+</li>
+<li><p>Distributionally Robust Nonnegative Matrix Factorization with Self-Paced Adaptive Multi-Loss Fusion
+<br /> W. Barkhoda, <b>A. Seyedi</b>, N. Gillis, and F. Akhlaghian, [First revision].</p>
+</li>
 <li><p>Semantic Encoder-Decoder Nonnegative Matrix Factorization with Kullback-Leibler Divergence
-<br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Daneshfar, and F. Akhlaghian, [First revision].</p>
+<br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Daneshfar, and F. Akhlaghian, [Second revision].</p>
+</li>
 </ul>
 <h3>2026</h3>
 <ul>
-<li><p><a href=https://doi.org/10.1016/j.patcog.2025.112211>Encoder-Decoder nonnegative matrix factorization with 
-β-divergence for data clustering</a>
+<li><p>Data Clustering by Encoder-Decoder Nonnegative Matrix Factorization with β-Divergence
 <br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Akhlaghian, and F. Daneshfar, Pattern Recognition 2026.</p>
 </li>
 <li><p><a href="https://doi.org/10.1016/j.patcog.2025.111732">Instance-wise Distributionally Robust Nonnegative Matrix Factorization</a>
@@ -120,32 +126,31 @@
 </table>
 
 <!-- core  -->
-        <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
-        <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
-        <!-- bootstrap 3 affix -->
-        <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
-        <!-- Owl carousel  -->
-        <script src="assets/vendors/owl-carousel/js/owl.carousel.js"></script>
-        <!-- Ollie js -->
-        <script src="assets/js/Ollie.js"></script>
-        <!-- Statcounter -->
-        <script type="text/javascript">
-            var sc_project=12494759; 
-            var sc_invisible=1; 
-            var sc_security="06ce839b"; 
-        </script>
-        <script type="text/javascript"
-            src="https://www.statcounter.com/counter/counter.js"
-            async></script>
-        <noscript>
-            <div class="statcounter"><a title="Web Analytics"
-                href="https://statcounter.com/" target="_blank"><img
-                class="statcounter"
-                src="https://c.statcounter.com/12494759/0/06ce839b/1/"
-                alt="Web Analytics"></a></div>
-        </noscript>
-        <!-- End of Statcounter Code -->
+	<script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
+	<script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
+	<!-- bootstrap 3 affix -->
+	<script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
+	<!-- Owl carousel  -->
+	<script src="assets/vendors/owl-carousel/js/owl.carousel.js"></script>
+	<!-- Ollie js -->
+	<script src="assets/js/Ollie.js"></script>
+	<!-- Statcounter -->
+	<script type="text/javascript">
+		var sc_project=12494759; 
+		var sc_invisible=1; 
+		var sc_security="06ce839b"; 
+	</script>
+	<script type="text/javascript"
+		src="https://www.statcounter.com/counter/counter.js"
+		async></script>
+	<noscript>
+		<div class="statcounter"><a title="Web Analytics"
+			href="https://statcounter.com/" target="_blank"><img
+			class="statcounter"
+			src="https://c.statcounter.com/12494759/0/06ce839b/1/"
+			alt="Web Analytics"></a></div>
+	</noscript>
+<!-- End of Statcounter Code -->
 
 </body>
 </html>
-
