--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </ul>
 <h3>Recent news</h3>
 <ul>
+<li><p>I attended the &ldquo;SOCN: <a href="https://sites.uclouvain.be/socn/drupal/socn/node/463">Stochastic variance-reduced optimization algorithms and applications to federated learning</a>&rdquo; course, UCLouvain, Belgium, October 7-9, 2025.</p>
+</li>
 <li><p>I attended the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/453">Systems, Optimization, Control and Networks (SOCN) Workshop</a>, UMONS, Belgium, September 26, 2025.</p>
 </li>
 <li><p>I was on the organizing committee of the <a href="https://sites.google.com/view/lrma25">third workshop on Low-Rank Models and Applications (LRMA 25)</a>, Mons, September 11-12, 2025.</p>
@@ -90,7 +92,6 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </tr>
 </table>
 
-
 <!-- core  -->
 	<script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
 	<script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
@@ -117,7 +118,6 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 			alt="Web Analytics"></a></div>
 	</noscript>
 <!-- End of Statcounter Code -->
-
 
 </body>
 </html>
