--- a/Publications.html
+++ b/Publications.html
@@ -41,10 +41,10 @@
 </ul>
 <h3>2026</h3>
 <ul>
-<li><p>Data Clustering by Encoder-Decoder Nonnegative Matrix Factorization with β-Divergence
+<li><p><a href="https://doi.org/10.1016/j.patcog.2025.112211">Data Clustering by Encoder-Decoder Nonnegative Matrix Factorization with β-Divergence</a>
 <br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Akhlaghian, and F. Daneshfar, Pattern Recognition 2026.</p>
 </li>
-<li><p><a href="https://doi.org/10.1016/j.patcog.2025.111732">Instance-wise Distributionally Robust Nonnegative Matrix Factorization</a>
+<li><p><a href="https://doi.org/10.1016/j.patcog.2025.111732">Instance-wise Distributionally Robust Nonnegative Matrix Factorization</a>&ndash; [<a href="https://github.com/barkhoda/iDRNMF">source code</a>]
 <br /> W. Barkhoda, <b>A. Seyedi</b>, N. Gillis, and F. Akhlaghian, Pattern Recognition 2026.</p>
 </li>
 </ul>
