--- a/Services.html
+++ b/Services.html
@@ -39,9 +39,15 @@
 </li>
 <li><p>Expert Systems with Applications</p>
 </li>
+<li><p>Information Sciences</p>
+</li>
+<li><p>Expert Systems with Applications</p>
+</li>
 <li><p>Information Processing &amp; Management</p>
 </li>
 <li><p>Engineering Applications of Artificial Intelligence</p>
+</li>
+<li><p>Journal of Computational and Applied Mathematics</p>
 </li>
 <li><p>Scientific Reports</p>
 </li>
@@ -58,41 +64,11 @@
 </ul>
 <h4>Speech</h4>
 <ul>
-<li><p><b>Deep Matrix Factorizations for Data Representation</b>, Feb 20 2025, STADIUS Center, KU Leuven, Belgium. </p>
+<li><p><b>Deep Matrix Factorizations for Data Representation</b>, Feb 20 2025, STADIUS Center, KU Leuven, belgium. </p>
 </li>
 </ul>
 </td>
 </tr>
 </table>
-
-<!-- core  -->
-        <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
-        <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
-        <!-- bootstrap 3 affix -->
-        <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
-        <!-- Owl carousel  -->
-        <script src="assets/vendors/owl-carousel/js/owl.carousel.js"></script>
-        <!-- Ollie js -->
-        <script src="assets/js/Ollie.js"></script>
-        <!-- Statcounter -->
-        <script type="text/javascript">
-            var sc_project=12494759; 
-            var sc_invisible=1; 
-            var sc_security="06ce839b"; 
-        </script>
-        <script type="text/javascript"
-            src="https://www.statcounter.com/counter/counter.js"
-            async></script>
-        <noscript>
-            <div class="statcounter"><a title="Web Analytics"
-                href="https://statcounter.com/" target="_blank"><img
-                class="statcounter"
-                src="https://c.statcounter.com/12494759/0/06ce839b/1/"
-                alt="Web Analytics"></a></div>
-        </noscript>
-        <!-- End of Statcounter Code -->
-
 </body>
 </html>
-
-
