--- a/Services.html
+++ b/Services.html
@@ -29,37 +29,37 @@
 <h2>Services</h2>
 <h4>Reviewer for multiple journals</h4>
 <ul>
-<li><p>Information Fusion</p>
-</li>
-<li><p>Pattern Recognition</p>
-</li>
 <li><p>Artificial Intelligence Review</p>
-</li>
-<li><p>Knowledge-Based Systems</p>
-</li>
-<li><p>Expert Systems with Applications</p>
-</li>
-<li><p>Information Sciences</p>
-</li>
-<li><p>Expert Systems with Applications</p>
-</li>
-<li><p>Information Processing &amp; Management</p>
-</li>
-<li><p>Engineering Applications of Artificial Intelligence</p>
-</li>
-<li><p>Journal of Computational and Applied Mathematics</p>
-</li>
-<li><p>Scientific Reports</p>
-</li>
-<li><p>Digital Signal Processing</p>
-</li>
-<li><p>International Journal of Machine Learning and Cybernetics</p>
-</li>
-<li><p>Mathematics</p>
 </li>
 <li><p>Computers and Electrical Engineering</p>
 </li>
+<li><p>Digital Signal Processing</p>
+</li>
+<li><p>Engineering Applications of Artificial Intelligence</p>
+</li>
+<li><p>Expert Systems with Applications</p>
+</li>
+<li><p>Information Fusion</p>
+</li>
+<li><p>Information Processing &amp; Management</p>
+</li>
+<li><p>Information Sciences</p>
+</li>
+<li><p>International Journal of Machine Learning and Cybernetics</p>
+</li>
+<li><p>Journal of Computational and Applied Mathematics</p>
+</li>
 <li><p>Journal of Information and Intelligence</p>
+</li>
+<li><p>Knowledge-Based Systems</p>
+</li>
+<li><p>Mathematics</p>
+</li>
+<li><p>Pattern Recognition</p>
+</li>
+<li><p>Scientific Reports</p>
+</li>
+<li><p>Signal Processing</p>
 </li>
 </ul>
 <h4>Speech</h4>
