--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </ul>
 <h3>Recent news</h3>
 <ul>
+<li><p>My three Master's students successfully defended their theses in Artificial Intelligence at the <a href="https://amlteams.github.io">Algebraic ML Team</a>, University of Kurdistan, September-October 2025.</p>
+</li>
 <li><p>I attended the &ldquo;SOCN: <a href="https://sites.uclouvain.be/socn/drupal/socn/node/463">Stochastic variance-reduced optimization algorithms and applications to federated learning</a>&rdquo; course, UCLouvain, Belgium, October 7-9, 2025.</p>
 </li>
 <li><p>I attended the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/453">Systems, Optimization, Control and Networks (SOCN) Workshop</a>, UMONS, Belgium, September 26, 2025.</p>
