--- a/Students.html
+++ b/Students.html
@@ -32,7 +32,7 @@
 <tr class="r1"><td class="c1"><b>PhD(s)</b> </td><td class="c2"> </td><td class="c3"> </td></tr>
 <tr class="r2"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
 <tr class="r3"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
-<tr class="r4"><td class="c1"><a href="https://scholar.google.com/citations?hl=en&amp;user=bDDX7RIAAAAJ">Wafa Barkhoda</a></td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2022-Present</td><td class="c4"> <b>distributionally robust optimization</b> </td></tr>
+<tr class="r4"><td class="c1"><a href="https://scholar.google.com/citations?hl=en&amp;user=bDDX7RIAAAAJ">Wafa Barkhoda</a></td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2022-Present</td><td class="c4"> <b>distributionally robust optimization</b> </td><td class="c5">Instructor at the Kermanshah University of Technology</td></tr>
 <tr class="r5"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
 <tr class="r6"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
 <tr class="r7"><td class="c1"><b>Master(s)</b> </td><td class="c2"> </td><td class="c3"> </td></tr>
