--- a/index.html
+++ b/index.html
@@ -40,15 +40,13 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 <p>I am currently a Doctoral Researcher in Matrix Theory and Optimization at the <a href="https://web.umons.ac.be/en/">University of Mons</a> under the supervision of <a href="https://sites.google.com/site/nicolasgillis">Prof. Nicolas Gillis</a>. Previously, as a graduate research assistant at the <a href="https://uok.ac.ir/en/">University of Kurdistan</a>, I worked on representation learning with a focus on robustness and generalization. I also led the <a href="https://amlteams.github.io/">Algebraic Machine Learning (AML) team</a>, a group that explores fundamental methods in unsupervised machine learning. I have a Master’s degree in Artificial Intelligence from the same university, where I worked with <a href="https://scholar.google.com/citations?user=BQl2nKsAAAAJ">Dr. Fardin Akhlaghian</a> and <a href="https://scholar.google.com/citations?user=bR5ttrwAAAAJ">Dr. Parham Moradi</a> on matrix factorization and low-rank approximation for various applications such as semi-supervised learning, multi-label classification, and recommendation systems. I also have an Associate and a Bachelor’s degree in Software Engineering.</p>
 <h2>Research interests</h2>
 <ul>
-<li><p><b>Math:</b> linear algebra, numerical analysis, optimization</p>
+<li><p><b>Machine Learning:</b> representation learning, deep learning, unsupervised learning  </p>
 </li>
-<li><p><b>Applied math:</b> low-rank approximation, matrix factorization, tensor factorization</p>
+<li><p><b>Trustworthy ML:</b> robustness, generalization, interpretability, fairness  </p>
 </li>
-<li><p><b>Machine Learning:</b> representation learning, deep learning, unsupervised learning</p>
+<li><p><b>Applications:</b> healthcare, recommender systems, remote sensing  </p>
 </li>
-<li><p><b>Trustworthy ML:</b> generalization, robustness, interpretability, fairness</p>
-</li>
-<li><p><b>Applications:</b> healthcare, remote sensing, recommendation </p>
+<li><p><b>Applied Mathematics:</b> linear algebra, optimization, low-rank approximation</p>
 </li>
 </ul>
 <h2>News</h2>
@@ -123,3 +121,4 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 
 </body>
 </html>
+
