--- a/Publications.html
+++ b/Publications.html
@@ -32,15 +32,15 @@
 <li><p>Community Detection via Deep Motif-Regularized Asymmetric Nonnegative Matrix Factorization
 <br /> H. Sohrabi, <b>A. Seyedi</b>, P. Moradi, and Sh. Esmaeili, [First revision].</p>
 </li>
-<li><p>Distributionally Robust Nonnegative Matrix Factorization with Self-Paced Adaptive Multi-Loss Fusion
-<br /> W. Barkhoda, <b>A. Seyedi</b>, N. Gillis, and F. Akhlaghian, [First revision].</p>
-</li>
 <li><p>Semantic Encoder-Decoder Nonnegative Matrix Factorization with Kullback-Leibler Divergence
 <br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Daneshfar, and F. Akhlaghian, [Second revision].</p>
 </li>
 </ul>
 <h3>2026</h3>
 <ul>
+<li><p>Distributionally Robust Nonnegative Matrix Factorization with Self-Paced Adaptive Multi-Loss Fusion
+<br /> W. Barkhoda, <b>A. Seyedi</b>, N. Gillis, and F. Akhlaghian, Information Sciences 2026.</p>
+</li>
 <li><p><a href="https://doi.org/10.1016/j.patcog.2025.112211">Data Clustering by Encoder-Decoder Nonnegative Matrix Factorization with β-Divergence</a>
 <br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Akhlaghian, and F. Daneshfar, Pattern Recognition 2026.</p>
 </li>
