--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </ul>
 <h3>Recent news</h3>
 <ul>
+<li><p>Our paper, <a href="https://">Distributionally Robust NMF with Self-paced Learning</a>, has been accepted for publication in Information Sciences journal 2026.</p>
+</li>
 <li><p>My three Master's students successfully defended their theses in Artificial Intelligence at the <a href="https://amlteams.github.io">Algebraic ML Team</a>, University of Kurdistan, September-October 2025.</p>
 </li>
 <li><p>I attended the &ldquo;SOCN: <a href="https://sites.uclouvain.be/socn/drupal/socn/node/463">Stochastic variance-reduced optimization algorithms and applications to federated learning</a>&rdquo; course, UCLouvain, Belgium, October 7-9, 2025.</p>
@@ -121,4 +123,5 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 
 </body>
 </html>
+
 
