--- a/Students.html
+++ b/Students.html
@@ -38,7 +38,7 @@
 <tr class="r7"><td class="c1"><b>Master(s)</b> </td><td class="c2"> </td><td class="c3"> </td></tr>
 <tr class="r8"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
 <tr class="r9"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
-<tr class="r10"><td class="c1">Zahra Mohseni Rad </td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2023-Present</td><td class="c4"> <b>hyperspectral unmixing</b> </td></tr>
+<tr class="r10"><td class="c1">Zahra Mohsenirad </td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2023-Present</td><td class="c4"> <b>hyperspectral unmixing</b> </td></tr>
 <tr class="r11"><td class="c1">
 </td></tr></table>
 <h2>Alumni</h2>
@@ -101,3 +101,4 @@ Sarina Khaledian </td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td clas
 
 </body>
 </html>
+
