--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </li>
 <li><p>Our paper, <a href="https://doi.org/10.1016/j.patcog.2025.112211">Encoder-Decoder NMF with β-Divergence</a>, has been accepted for publication in Pattern Recognition journal 2026.</p>
 </li>
-<li><p>Our paper, <a href="https://doi.org/10.1016/j.patcog.2025.111732">Instance-wise Distributionally Robust NMF</a>, has been accepted for publication in Pattern Recognition journal 2026. It's my first collaboration with Prof. Nicolas Gillis.</p>
+<li><p>Our paper, <a href="https://doi.org/10.1016/j.patcog.2025.111732">Instance-wise Distributionally Robust NMF</a>, has been accepted for publication in Pattern Recognition journal 2026. It's my first collaboration with Prof. Nicolas Gillis!</p>
 </li>
 <li><p>I attended the &ldquo;<a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">Learning Theory from First Principles</a>&rdquo; course (<a href="https://www.di.ens.fr/~fbach">Prof. Francis Bach</a>), KU Leuven, Belgium, April 1-3, 2025.</p>
 </li>
@@ -123,5 +123,6 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 
 </body>
 </html>
+
 
 
