--- a/Students.html
+++ b/Students.html
@@ -31,7 +31,7 @@
 <tr class="r1"><td class="c1"><b>PhD(s)</b> </td><td class="c2"> </td><td class="c3"> </td></tr>
 <tr class="r2"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
 <tr class="r3"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
-<tr class="r4"><td class="c1"><a href="https://scholar.google.com/citations?hl=en&amp;user=bDDX7RIAAAAJ">Wafa Barkhoda</a></td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2022-Present</td><td class="c4"> <b>distributionally robust optimization</b> </td><td class="c5">Instructor at the Kermanshah University of Technology</td></tr>
+<tr class="r4"><td class="c1"><a href="https://scholar.google.com/citations?hl=en&amp;user=bDDX7RIAAAAJ">Wafa Barkhoda</a></td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2022-Present</td><td class="c4"> <b>distributionally robust optimization</b> </td></tr>
 <tr class="r5"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
 <tr class="r6"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
 <tr class="r7"><td class="c1"><b>Master(s)</b> </td><td class="c2"> </td><td class="c3"> </td></tr>
@@ -54,10 +54,10 @@ Shirin Moradi</td><td class="c2">(Supervisor: Dr. Akhlaghian) </td><td class="c3
 <tr class="r9"><td class="c1">Setare Mohammadi </td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2021-2023</td><td class="c4"> <b>robust representation learning</b> </td></tr>
 <tr class="r10"><td class="c1"><a href="https://scholar.google.com/citations?user=S8QF7LMAAAAJ&amp;hl=en">Mohammad Faraji</a> </td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2021-2023</td><td class="c4"> <b>multi-label feature selection</b> </td></tr>
 <tr class="r11"><td class="c1"><a href="https://scholar.google.com/citations?user=0VjfV-YAAAAJ&amp;hl=en">Akram Hajiveiseh</a> </td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2020-2023</td><td class="c4"> <b>directed graph clustering</b> </td></tr>
-<tr class="r12"><td class="c1"><a href="https://scholar.google.com/citations?user=d8-bxRMAAAAJ&amp;hl=en">Reza Mahmoodi</a> </td><td class="c2"> (Supervisors: Dr. Abdollahpouri &amp; Dr. Akhlaghian) </td><td class="c3"> 2021-2022</td><td class="c4"> <b>link prediction</b> </td><td class="c5"> PhD student at the University of Kurdistan </td></tr>
+<tr class="r12"><td class="c1"><a href="https://scholar.google.com/citations?user=d8-bxRMAAAAJ&amp;hl=en">Reza Mahmoodi</a> </td><td class="c2"> (Supervisors: Dr. Abdollahpouri &amp; Dr. Akhlaghian) </td><td class="c3"> 2021-2022</td><td class="c4"> <b>link prediction</b> </td></tr>
 <tr class="r13"><td class="c1"><a href="https://scholar.google.com/citations?user=ANttTRIAAAAJ&amp;hl=en">Jovan Chavoshinejad</a> </td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2020-2022</td><td class="c4"> <b>self-supervised/semi-supervised learning</b> </td></tr>
 <tr class="r14"><td class="c1"><a href="https://scholar.google.com/citations?user=a_Q67kIAAAAJ&amp;hl=en">Navid Salahian</a> </td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2020-2022</td><td class="c4"> <b>unsupervised representation learning</b> </td></tr>
-<tr class="r15"><td class="c1"><a href="https://scholar.google.com/citations?user=jIh78k8AAAAJ&amp;hl=en">Maryam Mozafari</a></td><td class="c2">(Supervisors: Dr. Pir Mohammadiani &amp; Dr. Akhlaghian) </td><td class="c3"> 2021-2022</td><td class="c4"> <b>unsupervised feature selection</b> </td><td class="c5"> PhD student at the University of Quebec in Outaouais </td></tr>
+<tr class="r15"><td class="c1"><a href="https://scholar.google.com/citations?user=jIh78k8AAAAJ&amp;hl=en">Maryam Mozafari</a></td><td class="c2">(Supervisors: Dr. Pir Mohammadiani &amp; Dr. Akhlaghian) </td><td class="c3"> 2021-2022</td><td class="c4"> <b>unsupervised feature selection</b>  </td></tr>
 <tr class="r16"><td class="c1">
 </td></tr></table>
 </td>
