--- a/Publications.html
+++ b/Publications.html
@@ -50,6 +50,9 @@
 </ul>
 <h3>2025</h3>
 <ul>
+<li><p>A Deep Latent Factor Graph Clustering with Fairness-Utility Trade-off Perspective
+<br /> S. Ghodsi, <b>A. Seyedi</b>, T. Quy, F. Karimi, and E. Ntoutsi, 2025 IEEE International Conference on Big Data.</p>
+</li>
 <li><p><a href="https://doi.org/10.1007/s00521-024-10370-4">A New Bi-Level Deep Human Action Representation Structure based on the Sequence of Sub-Actions</a>
 <br /> F. Akhlaghian, M. Ramezani, H. Afshoon, <b>A. Seyedi</b>, and A. Moradyani, Neural Computing and Applications 2025.</p>
 </li>
@@ -154,4 +157,5 @@
 
 </body>
 </html>
+
 
