--- a/Publications.html
+++ b/Publications.html
@@ -38,7 +38,7 @@
 </ul>
 <h3>2026</h3>
 <ul>
-<li><p>Distributionally Robust Nonnegative Matrix Factorization with Self-Paced Adaptive Multi-Loss Fusion &ndash; [<a href="https://github.com/barkhoda/DRNMF-SP">source code</a>]
+<li><p><a href="https://doi.org/10.1016/j.ins.2025.122823">Distributionally Robust Nonnegative Matrix Factorization with Self-Paced Adaptive Multi-Loss Fusion</a> &ndash; [<a href="https://github.com/barkhoda/DRNMF-SP">source code</a>]
 <br /> W. Barkhoda, <b>A. Seyedi</b>, N. Gillis, and F. Akhlaghian, Information Sciences 2026.</p>
 </li>
 <li><p><a href="https://doi.org/10.1016/j.patcog.2025.112211">Data Clustering by Encoder-Decoder Nonnegative Matrix Factorization with β-Divergence</a>
@@ -157,5 +157,6 @@
 
 </body>
 </html>
+
 
 
