--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 <ul>
 <li><p>Our paper, &ldquo;A Deep Latent Factor Graph Clustering with Fairness-Utility Trade-off Perspective&rdquo;, has been accepted  as a regular paper for the 2025 IEEE International Conference on Big Data.</p>
 </li>
-<li><p>Our paper, <a href="https://">Distributionally Robust NMF with Self-paced Learning</a>, has been accepted for publication in Information Sciences journal 2026.</p>
+<li><p>Our paper, <a href="https://doi.org/10.1016/j.ins.2025.122823">Distributionally Robust NMF with Self-paced Learning</a>, has been accepted for publication in Information Sciences journal 2026.</p>
 </li>
 <li><p>My three Master's students successfully defended their theses in Artificial Intelligence at the <a href="https://amlteams.github.io">Algebraic ML Team</a>, University of Kurdistan, September-October 2025.</p>
 </li>
@@ -125,6 +125,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 
 </body>
 </html>
+
 
 
 
