--- a/Publications.html
+++ b/Publications.html
@@ -50,7 +50,7 @@
 </ul>
 <h3>2025</h3>
 <ul>
-<li><p>A Deep Latent Factor Graph Clustering with Fairness-Utility Trade-off Perspective
+<li><p><a href="https://arxiv.org/abs/2510.23507">A Deep Latent Factor Graph Clustering with Fairness-Utility Trade-off Perspective</a> &ndash; [<a href="https://github.com/SiamakGhodsi/DFNMF">source code</a>] [<a href="https://arxiv.org/abs/2510.23507">pdf</a>]
 <br /> S. Ghodsi, <b>A. Seyedi</b>, T. Quy, F. Karimi, and E. Ntoutsi, 2025 IEEE International Conference on Big Data.</p>
 </li>
 <li><p><a href="https://doi.org/10.1007/s00521-024-10370-4">A New Bi-Level Deep Human Action Representation Structure based on the Sequence of Sub-Actions</a>
@@ -157,6 +157,7 @@
 
 </body>
 </html>
+
 
 
 
