--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 <h2>News</h2>
 <h3>Upcoming</h3>
 <ul>
-	Honestly, nothing much, my supervisor thinks I should be writing papers.
+	Honestly, not much, my supervisor thinks I should be writing papers.
 </ul>
 <h3>Recent news</h3>
 <ul>
@@ -126,6 +126,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 
 </body>
 </html>
+
 
 
 
