--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h1>Amjad Seyedi</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="photos/bio.jpg" alt="alt text" width="140px" height="140px" />&nbsp;</td>
+<img src="photos/bio.png" alt="alt text" width="140px" height="140px" />&nbsp;</td>
 <td align="left"><p>Doctoral researcher,<br /> <a href="https://web.umons.ac.be/maro/en/home/">Mathematics and Operational Research Department</a> <br /><a href="https://web.umons.ac.be/fpms/en/">Faculty of Engineering</a>, <a href="https://web.umons.ac.be/en/">University of Mons (UMONS)</a><br />
 Rue de Houdain 9, 7000 Mons, Belgium <br /> 
 Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
@@ -126,6 +126,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 
 </body>
 </html>
+
 
 
 
