--- a/Publications.html
+++ b/Publications.html
@@ -50,6 +50,9 @@
 </ul>
 <h3>2025</h3>
 <ul>
+<li><p>Semantic Encoder-Decoder Nonnegative Matrix Factorization with Kullback-Leibler Divergence
+<br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Daneshfar, and F. Akhlaghian, International Journal of Machine Learning and Cybernetics 2025.</p>
+</li>
 <li><p><a href="https://arxiv.org/abs/2510.23507">A Deep Latent Factor Graph Clustering with Fairness-Utility Trade-off Perspective</a> &ndash; [<a href="https://github.com/SiamakGhodsi/DFNMF">source code</a>] [<a href="https://arxiv.org/abs/2510.23507">pdf</a>]
 <br /> S. Ghodsi, <b>A. Seyedi</b>, T. Quy, F. Karimi, and E. Ntoutsi, 2025 IEEE International Conference on Big Data.</p>
 </li>
@@ -157,6 +160,7 @@
 
 </body>
 </html>
+
 
 
 
