--- a/Services.html
+++ b/Services.html
@@ -55,6 +55,8 @@
 </li>
 <li><p>Mathematics</p>
 </li>
+<li><p>Neurocomputing</p>
+</li>
 <li><p>Pattern Recognition</p>
 </li>
 <li><p>Scientific Reports</p>
@@ -72,3 +74,4 @@
 </table>
 </body>
 </html>
+
